<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.engin33r.neurotech.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp">

        <RelativeLayout
            android:id="@+id/monitoringContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:onClick="openMonitoring">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/monitoringIcon" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/monitoring"
                    app:srcCompat="@drawable/icon_monitoring"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/monitoringTextContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/monitoringIcon"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/monitoringTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/HomeNavLink"
                    android:text="@string/monitoring" />

                <TextView
                    android:id="@+id/monitoringBlurb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monitoring_blurb" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/statisticsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/monitoringContainer"
            android:onClick="openStatistics">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/statisticsIcon" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/statistics"
                    app:srcCompat="@drawable/icon_statistics"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/statisticsTextContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/statisticsIcon"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/statisticsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/HomeNavLink"
                    android:text="@string/statistics" />

                <TextView
                    android:id="@+id/statisticsBlurb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_blurb" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settingsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/statisticsContainer">

            <ImageView
                android:id="@+id/settingsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                app:srcCompat="@drawable/icon_settings" />

            <LinearLayout
                android:id="@+id/settingsTextContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/settingsIcon"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settingsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/HomeNavLink"
                    android:text="@string/settings" />

                <TextView
                    android:id="@+id/settingsBlurb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_blurb" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>