<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.engin33r.neurotech.MonitoringActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/chartDangerContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="8dp">

        <TextView
            android:id="@+id/chartDangerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/monitoring_abnormal"
            android:textAppearance="@style/ChartTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/chartDangerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chartDangerTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/status_nodata"
            android:textAlignment="center"  />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartDanger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/chartDangerStatus"
            android:textAppearance="@style/ChartTitle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chartTotalContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="8dp">

        <TextView
            android:id="@+id/chartTotalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/monitoring_total"
            android:textAppearance="@style/ChartTitle"
            android:textAlignment="center"  />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/chartTotalTitle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <TextView
            android:id="@+id/timelineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/monitoring_total"
            android:textAppearance="@style/ChartTitle"
            android:textAlignment="center"  />

        <TextView
            android:id="@+id/timelineStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timelineTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/status_nodata"
            android:textAlignment="center"  />

        <io.engi.android.views.StatusTimeline
            android:id="@+id/timeline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/timelineStatus" />

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/timelineStatus"
            android:orientation="horizontal"
            android:padding="12dp">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/element" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/element" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/element" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/element" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/element" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/element" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/element" />

        </LinearLayout>-->

    </RelativeLayout>

</LinearLayout>
